--- a/style/style.css
+++ b/style/style.css
@@ -1,261 +1,178 @@
 body {
   font-family: "Noto Sans Display", sans-serif;
   text-align: center;
+  background-color: grey;
+}
+
+
+h2{
+  font-family: 'Syncopate', sans-serif;
+  font-size: xx-large;
+  font: bolder;
+  color: white;
+  padding-bottom: 50px;
+}
+
+a{
+  text-decoration: none;
+  list-style: none;
 }
 
 /*Header*/
 header {
-  background-color: #0fbeb1;
+  background-color: #000000;
   width: 100%;
   height: 80%;
+
+  .ico-redes {
+    width: 30px;
+    padding: 10px 20px;
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(149deg) brightness(105%) contrast(105%);
+    width: 30px;
+    height: 30px;
+  }
+  .ico-redes:hover{
+    transform: scale(1.5);
+    transition: transform 1s;
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(149deg) brightness(105%) contrast(105%) drop-shadow(0 0 15px #FFFFFF);
+  }
 }
 
-.logo {
-  padding: 50px 0 0 0;
-  height: 100px;
-  margin: 20px;
-}
-
-.titulo {
-  font-size: 70px;
+main{
+  background-color: #080808;
   color: white;
-  margin: 30px 0 0 0;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .menu{
+    display: flex;
+    flex-direction: row;
+    text-decoration: none;
+    gap: 50px;
+    .menu-item a{  
+      text-decoration: none;
+      list-style: none;
+      color: white;
+      font-family: 'Inter', sans-serif;
+    }
+    .menu-item:hover{
+      transform: scale(1.5);
+      transition: transform 1s;
+      .a{
+        color: purple;
+      }
+    }
+  }
 }
 
-.slogan {
-  color: white;
-  font-size: 25px;
+/*Banner*/
+
+.seccion-banner{
+  background-color: #161616;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+  gap: 50px;
+  height: 200px;
+  overflow: hidden;
+  .soycodev{
+    height: 80px;
+    transition: 0.5s;
+    font-size: 100px;
+    font-family: 'Syncopate', sans-serif;
+    color: white;
+  }
+  .logo{
+    height: 150px;
+    transition: 0.5s;
+    z-index: 1;
+  }
 }
 
-.saludo {
-  height: 600px;
-  margin: 0;
-  padding: 0;
+.seccion-banner:hover{
+  .logo{
+    transform: scale(150%) translateX(65%);
+  }
+  .soycodev{
+    transform: scale(5%) translateX(-100%);
+  }
 }
 
-/*Quien soy*/
+/*Seccion Quien*/
 
-.section-quien {
-  background-color: white;
-  height: auto;
-}
-.titulo-quien {
-  color: #13a79b;
-  font-size: 60px;
-  margin: 60px 0 30px 0;
-}
-.foto-quien {
-  padding: 30px;
-  border-radius: 50%;
+.seccion-quien{
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 100px 0;
+
+  .titulo-quien{
+    font-size: 40px;
+  }
+  .texto-quien{
+    font-family: 'Inter', sans-serif;
+    color: white;
+    width: 850px;
+    font-size: x-large;
+    line-height: 150%;
+
+    .bolder{
+      font-weight: bolder;
+      color: purple;
+    }
+  }
 }
 
-.texto-quien {
-  height: auto;
-  margin: 0 20px;
-  font-size: 30px;
-  padding: 30px 0 100px 0;
+/*Conocimientos*/
+
+@keyframes scroll {
+  from {
+    transform: translateX(30%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+.seccion-hab{
+  background-color: black;
+  height: 400px;
+  .cont-hab{
+    width: 80vw;
+    height: auto;
+    margin: auto;
+    overflow: hidden;
+    padding: 50px 0;
+  }
+}
+
+.slider{
+  display: flex;
+  animation: scroll 30s linear infinite running;
+  width: calc(20% * 16);
 }
 
 /*Portafolio*/
-
-.seccion-port {
-  background-color: #04656e;
-  padding-bottom: 80px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.astronauta {
-  height: 500px;
-}
-.titulo-port {
-  padding: 20px 0;
-  font-size: 60px;
-  color: white;
-}
-.seg-fondo {
-  background-color: #13a79b;
-  height: auto;
-  width: 50%;
-  border-radius: 25px;
-  padding: 50px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.secciones-port {
-  background-color: #f3f3f3;
-  width: 80%;
-  height: 150px;
-  border-radius: 15px;
-  display: flex;
-  align-items: center;
-  margin: 30px 0;
-  justify-content: space-between;
-}
-.logo-secciones {
-  max-width: 120px;
-  max-height: 120px;
-  width: 120px;
-  padding: 15px 30px 15px 40px;
-}
-.logo-seccion-alura {
-  padding: 15px 30px 15px 70px;
-}
-.link-secciones {
-  color: white;
-  font-size: 25px;
-}
-.boton-secciones,
-.boton-seccion-alura {
-  background-color: #04656e;
-  height: 50%;
-  width: 60%;
-  border-radius: 20px;
-  border-style: none;
-  margin-right: 40px;
-}
-
-/*Redes*/
-
-.seccion-redes {
-  background-color: #0fbeb1;
-  width: auto;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.titulo-redes {
-  color: white;
-  padding: 50px;
-  font-size: 60px;
-}
-.ico-redes {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
-  width: 70%;
-  padding: 50px 0;
-}
-
-.logos-img {
-  height: 120px;
-}
-
-.señalar {
-  width: 90%;
-}
-
-.uno {
-  grid-column: 1;
-  grid-row: 1;
-}
-.dos {
-  grid-column: 3;
-  grid-row: 1;
-}
-.tres {
-  grid-column: 5;
-  grid-row: 1;
-}
-.cuatro {
-  grid-column: 2;
-  grid-row: 3;
-}
-.cinco {
-  grid-column: 4;
-  grid-row: 3;
-}
-.seis {
-  grid-column: 6;
-  grid-row: 3;
-}
-
-/*Contacto*/
-
-.seccion-contacto {
-  background-color: #04656e;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.contacto-items {
-  width: 70%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.astronauta-contacto {
-  width: 40%;
-}
-.formulario {
-  margin: 80px 0 50px 0;
-  height: 400px;
-  width: 800px;
-  background-color: #13a79b;
-  border-radius: 25px;
-  border: 10px #0fbeb1 solid;
-}
-
-.titulo-contacto {
-  color: white;
-  font-size: 50px;
-  margin: 10px 0;
-}
-.form {
-  display: grid;
-  justify-content: center;
-  justify-items: center;
-}
-form input,
-form textarea {
-  border-radius: 15px;
-  border: 5px #04656e solid;
-  margin: 10px;
-  height: 30px;
-  width: 400px;
-}
-form input::placeholder,
-form textarea::placeholder {
-  padding-left: 10px;
-  font-weight: bold;
-  font-size: 1.3em;
-  color: #13a79b;
-}
-form textarea {
-  height: 100px;
-}
-.boton-contacto {
-  background-color: #0fbeb1;
-  border: 3px #04656e solid;
-  border-radius: 10px;
-  margin: 10px;
-  width: 100px;
-  color: white;
-}
-.boton-contacto:hover {
-  background-color: #13a79b;
-  border: 3px #04656e solid;
-}
-.boton-contacto:active {
-  background-color: #04656e;
-  border: 3px #13a79b solid;
-}
-
-/*Footer*/
-
-footer {
+.seccion-port{
   background-color: black;
-  height: 80px;
-  color: white;
-  font-size: 2em;
-  align-items: center;
-  padding-top: 45px;
 }
 
+/*contacto*/
+.seccion-contacto{
+  background-color: yellow;
+}
+
+/*footer*/
+footer{
+  background-color: black;
+  color: white;
+}
+
+
+/*
 @media screen and (max-width: 1150px) {
   body {
     width: 100%;
@@ -274,7 +191,6 @@ footer {
   .señalar {
     width: 50%;
   }
-  /*Contacto*/
 
   .seccion-contacto {
     background-color: #04656e;
@@ -302,7 +218,6 @@ footer {
   .señalar {
     width: 50%;
   }
-  /*Contacto*/
   .astronauta-contacto{
     width: 70%;
   }
@@ -335,3 +250,4 @@ footer {
 
   }
 }
+*/
