--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,8 @@
 body {
   font-family: "Noto Sans Display", sans-serif;
-  text-align: center;
-  background-color: grey;
+  text-align: center;  
+  background-color: black;
 }
-
 
 h2{
   font-family: 'Syncopate', sans-serif;
@@ -20,10 +19,9 @@ a{
 
 /*Header*/
 header {
-  background-color: #000000;
   width: 100%;
-  height: 80%;
-
+  height: 50px;
+  padding: 10px;
   .ico-redes {
     width: 30px;
     padding: 10px 20px;
@@ -55,12 +53,14 @@ main{
       list-style: none;
       color: white;
       font-family: 'Inter', sans-serif;
+      font-size: large;
     }
     .menu-item:hover{
       transform: scale(1.5);
       transition: transform 1s;
       .a{
-        color: purple;
+        filter: drop-shadow(0 0 15px yellow);
+        color: orange;
       }
     }
   }
@@ -75,7 +75,7 @@ main{
   align-items: center;
   padding: 50px;
   gap: 50px;
-  height: 200px;
+  height: 250px;
   overflow: hidden;
   .soycodev{
     height: 80px;
@@ -103,12 +103,11 @@ main{
 /*Seccion Quien*/
 
 .seccion-quien{
-  background-color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 100px 0;
-
+  height: 300px;
   .titulo-quien{
     font-size: 40px;
   }
@@ -121,7 +120,7 @@ main{
 
     .bolder{
       font-weight: bolder;
-      color: purple;
+      color: rgb(125, 200, 11);
     }
   }
 }
@@ -138,7 +137,6 @@ main{
 }
 
 .seccion-hab{
-  background-color: black;
   height: 400px;
   .cont-hab{
     width: 80vw;
@@ -157,17 +155,51 @@ main{
 
 /*Portafolio*/
 .seccion-port{
-  background-color: black;
+  overflow: hidden;
+  padding: 50px 0;
+  height: fit-content;
+  .fondo-port{
+    width: 80%;
+    margin: 0 auto;
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(2, auto);
+    grid-gap: 30px;
+    grid-auto-rows: minmax(300px, auto);
+    .box{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      border-radius: 20px;
+      width: 500px;
+      height: 300px;
+    }
+  }
 }
 
-/*contacto*/
-.seccion-contacto{
-  background-color: yellow;
+.img-bx{
+  width: 100%;
+  border-radius: 20px;
+}
+
+.img-alt{
+  height: 261px; 
+  width: 500px;
+}
+
+.box:hover{
+  filter: drop-shadow(0 0 25px rgb(0, 115, 255));
+}
+
+.img-bx:hover{
+  opacity: 0.7;
 }
 
 /*footer*/
 footer{
-  background-color: black;
+  margin: 25px 0;
+  font-size: medium;
   color: white;
 }
 
